[package]
name = "image_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart", "macros"] }
chrono = "0.4.38"
dotenv = "0.15.0"
either = "1.13.0"
futures = "0.3.30"
image = "0.25.2"
mime_guess = "2.0.5"
rand = "0.8.5"
random = "0.14.0"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tower-http = { version = "0.6.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "v7"] }
